# financial-impact-simulator

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.jupyter  SECURITY.md  _config.yml  docker-compose.prod.yml  docker-compose.yml  main_readme.md  project_structure.md  readme-portfolio.md  requirements-api.txt  requirements.txt
conf/: .bandit  .env.example  .pre-commit-config.yaml  .safety-policy.yml  environments.py  pyproject.toml  setup.py
docs/: deployment.yml
examples/: basic_simulation.py
github/workflows/: ci.yml  codeql.yml  deploy.yml  email-notifications.yml  metrics.yml  notifications.yml  release.yml  security-scan.yml
src/api/: main_api.py
src/core/: financial_model.py  risk_calculator.py  scenario_generator.py
src/data/: data_loader.py  data_validator.py
src/utils/: constants.py  helpers.py
src/visualization/: charts.py  dashboard.py  reports.py
